// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    View 
    1
     
    expense
     totaling 
    $0.24
  </h1>
</div>
`;

exports[`should correctly ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    View 
    23
     
    expenses
     totaling 
    $23,509.91
  </h1>
</div>
`;
